--- a/CoreCRUD/Pages/Collectibles/Edit.cshtml
+++ b/CoreCRUD/Pages/Collectibles/Edit.cshtml
@@ -36,7 +36,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="Collectible.ManufacturerID" class="control-label"></label>
-                <input asp-for="Collectible.ManufacturerID" class="form-control" />
+                <!-- <input asp-for="Collectible.ManufacturerID" class="form-control" /> -->
+                <!-- @Html.Raw(ViewBag.ManufacturerID) -->
+                <select asp-for="Collectible.ManufacturerID" class ="form-control" asp-items="ViewBag.ManufacturerID"></select>                
                 <span asp-validation-for="Collectible.ManufacturerID" class="text-danger"></span>
             </div>
             <div class="form-group">
