--- a/CoreCRUD/Pages/Shared/_Layout.cshtml
+++ b/CoreCRUD/Pages/Shared/_Layout.cshtml
@@ -33,6 +33,8 @@
                     <li><a asp-page="/Index">Home</a></li>
                     <li><a asp-page="/About">About</a></li>
                     <li><a asp-page="/Contact">Contact</a></li>
+                    <li><a href="/Collectibles">Collectibles</a></li>
+                    <li><a href="/Manufacturers">Manufacturers</a></li>
                 </ul>
             </div>
         </div>
