006 - Corrected Foreign Key Relationship

--- a/CoreCRUD/Pages/Collectibles/Details.cshtml
+++ b/CoreCRUD/Pages/Collectibles/Details.cshtml
@@ -36,10 +36,10 @@
             @Html.DisplayFor(model => model.Collectible.Price)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Collectible.ManufacturerID)
+            @Html.DisplayNameFor(model => model.Collectible.Manufacturer)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Collectible.ManufacturerID)
+            @Html.DisplayFor(model => model.Collectible.Manufacturer.Name)
         </dd>
     </dl>
 </div>
