--- a/CoreCRUD/Pages/ManufacturerProfile.cshtml
+++ b/CoreCRUD/Pages/ManufacturerProfile.cshtml
@@ -6,9 +6,9 @@
 <h3>@Model.Manufacturer.Name is designated as 
     @if( @Model.Manufacturer.Count > 2 ) 
     { 
-        <strong> Important Manufacturer </strong>
+        <strong> Experienced Manufacturer </strong>
     }else{ 
-    <strong> Normal Manufacturer </strong>
+    <strong> New Manufacturer </strong>
     }
 </h3>
 
